--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,8 @@
     box-sizing: border-box;
 }
 
-.clearfix::after {
-    content: "";
-    display: table;
-    clear: both;
+html {
+    font-size: 65%;
 }
 
 body {
@@ -21,6 +19,13 @@ body {
     position: relative;
     height: 100vh;
     font-weight: 400;
+    padding: 2rem;
+}
+
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 .right { float: right; }
@@ -41,7 +46,7 @@ body {
 
 .budget {
     position: absolute;
-    width: 350px;
+    width: 35rem;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
