--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ h2 {
 .item {
     padding: 13px;
     border-bottom: 1px solid #e7e7e7;
+    width: 70%;
 }
 
 .item:first-child { border-top: 1px solid #e7e7e7; }
