--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,4 +12,8 @@ html {
 
 body {
     box-sizing: border-box;
+    color: #555;
+    position: relative;
+    height: 100vh;
+    padding: 2rem;
 }
